# signalpatch

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  demo-pedalboard.signalpatch
.github/workflows/: ci.yml
docs/: APPLIANCE.md  ARCHITECTURE.md  NAM_ROADMAP.md  PRODUCT.md  PRODUCTION_READINESS.md  REALTIME_SAFETY.md  ROADMAP.md  index.html
packaging/flatpak/: io.github.willbearfruits.SignalPatch.yml
packaging/linux/: io.github.willbearfruits.SignalPatch.desktop  io.github.willbearfruits.SignalPatch.metainfo.xml
packaging/patches/: namcore-nonatomic-shared-ptr.patch
src/: Main.cpp
src/audio/: Graph.cpp  Graph.h  PatchEngine.cpp  PatchEngine.h  Processors.cpp  Processors.h
src/ui/: MainComponent.cpp  MainComponent.h  NodeComponent.cpp  NodeComponent.h  PatchCanvas.cpp  PatchCanvas.h  Theme.cpp  Theme.h
tests/: EngineTests.cpp
